<resources>
    <string name="app_name">Canlisu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ivan Ivanov</string>
    <string name="nav_header_subtitle" translatable="false">name.example@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Выход</string>
    <string name="full_name" translatable="false">%1$s</string>


    <string name="card_name" translatable="false">Visa</string>
    <string name="menu_profile">Главная</string>
    <string name="user_info_title">User Information</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="address_label">Address:</string>
    <string name="payment_methods_title">Payment Methods</string>
    <string name="payment_card_template" translatable="false">Card: %1$s</string>
    <string name="payment_paypal_template" translatable="false">PayPal: %1$s</string>
    <string name="add_payment_method">Add New Payment Method</string>
    <string name="card_number_template" translatable="false">**** **** **** %1$s</string>
    <string name="mir_label" translatable="false">МИР</string>
    <string name="card_number_example" translatable="false">**** 3456</string>

    <string name="view_todos">View todos</string>
    <string name="todos_title">Todos</string>



    <string name="subscription_status">Status: %1$s</string>
    <string name="change_subscription">Change Subscription</string>
    <string name="subscription_name">Subscription: %1$s</string>
    <string name="monthly_payment">Monthly Payment: %1$s</string>
    <string name="last_billing_date">Last Billed: %1$s</string>
    <string name="choose_subscription">Choose Subscription</string>
    <string name="confirm_subscription_change">Confirm</string>
    <string name="sub_option_mini">Live water \"mini\" - 990₽/month</string>
    <string name="sub_option_standard">Live water \"standard\" - 1290₽/month</string>
    <string name="sub_option_premium">Live water \"premium\" - 1990₽/month</string>

    <string name="requests_title">Requests</string>
    <string name="create_new_request">Create New Request</string>

    <string name="describe_issue">Describe your issue</string>
    <string name="hint_issue_description">Describe the problem...</string>
    <string name="hint_contact_number">Contact phone number</string>
    <string name="submit_request">Submit Request</string>

    <string name="login_logo_cd" translatable="false">App logo</string>
    <string name="login_title" translatable="false">Welcome back</string>
    <string name="login_subtitle" translatable="false">Sign in to continue</string>
    <string name="login_email_label" translatable="false">Email or phone</string>
    <string name="login_password_label" translatable="false">Password</string>
    <string name="login_remember_me" translatable="false">Remember me</string>
    <string name="login_forgot_password" translatable="false">Forgot password?</string>
    <string name="login_sign_in" translatable="false">Sign In</string>
    <string name="login_or" translatable="false">or</string>
    <string name="login_create_account" translatable="false">Create Account</string>

    <string name="register_title" translatable="false">Create Account</string>
    <string name="register_first_name_label" translatable="false">First Name</string>
    <string name="register_last_name_label" translatable="false">Last Name</string>
    <string name="register_email_label" translatable="false">Email</string>
    <string name="register_phone_label" translatable="false">Phone</string>
    <string name="register_address_label" translatable="false">Address</string>
    <string name="register_card_label" translatable="false">Card Number</string>
    <string name="register_sign_up" translatable="false">Sign Up</string>

    <string name="error_invalid_name" translatable="false">Допустимы только буквы кириллицы</string>
    <string name="error_invalid_email" translatable="false">Некорректный email</string>
    <string name="error_invalid_phone" translatable="false">Некорректный номер телефона</string>
    <string name="error_invalid_email_or_phone" translatable="false">Некорректный email или номер телефона</string>
    <string name="error_invalid_password" translatable="false">Invalid password</string>
    <string name="error_user_not_found" translatable="false">User not found</string>
    <string name="error_email_exists" translatable="false">Аккаунт с этой почтой уже существует</string>
    <string name="error_phone_exists" translatable="false">Аккаунт с этим номером уже существует</string>
    <string name="register_password_label" translatable="false">Password</string>
    <string name="error_network" translatable="false">Network error</string>

    <string name="password_recovery_email_label" translatable="false">Email</string>
    <string name="password_recovery_send" translatable="false">Send</string>
    <string name="password_recovery_success" translatable="false">If an account exists with that email, we’ve sent reset instructions.</string>

    <string name="menu_subscription">Обслуживание</string>
    <string name="menu_help">Поддержка</string>

    <string name="tab_home">Home</string>
    <string name="tab_business">Business</string>
    <string name="select_plan">Select Plan</string>
</resources>
