<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.ChangeSubscriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_subscription"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/subscriptionGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/optionMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_option_mini"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/optionStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_option_standard"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/optionPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_option_premium"/>
        </RadioGroup>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_subscription_change"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>
