<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.SubscriptionFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/subscription_info_block"
        style="@style/SectionCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subStatusView"
                style="@style/SectionTitle"
                android:layout_margin="10dp"
                android:text="@string/subscription_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/subNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/subscription_name" />

            <TextView
                android:id="@+id/monthlyPaymentView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/monthly_payment" />

            <TextView
                android:id="@+id/lastBilledView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/last_billing_date" />

            <Button
                android:id="@+id/changeSubscriptionButton"
                android:background="@drawable/rounded_button"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:text="@string/change_subscription"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subscription_info_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:text="@string/tab_home" />

        <com.google.android.material.tabs.TabItem
            android:text="@string/tab_business" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subscriptionRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
