<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:id="@+id/subscription_info_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/subStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription_status"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/subNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription_name"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/monthlyPaymentView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/lastBilledView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_billing_date" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
