<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/request_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.request.RequestFragment"
    android:padding="16dp">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/requestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe_issue"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Поле для описания -->
    <EditText
        android:id="@+id/issueInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_issue_description"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:gravity="top|start"
        app:layout_constraintTop_toBottomOf="@id/requestTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Поле для номера -->
    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_contact_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/issueInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Кнопка отправки -->
    <Button
        android:id="@+id/submitRequestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_request"
        app:layout_constraintTop_toBottomOf="@id/phoneInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
